--- a/templates/base.html
+++ b/templates/base.html
@@ -169,7 +169,7 @@
                     <div class="copyright col-md-12">
                     {% for name, link in SOCIAL %}
                     <a href="{{ link }}">{{ name }}</a>{{ " | " if not loop.last }} 
-                    {% endfor %}
+                    {% endfor %}<br/>
                     &copy; 2016-{{ COPYRIGHT_YEAR }} <a href="{{ SITEURL }}">{{ AUTHOR }}</a> </div>
         </div>
       </div><!-- .site-info -->
