--- a/static/css/style.css
+++ b/static/css/style.css
@@ -318,7 +318,7 @@ article.post:first-child .post-inner-content {
 .entry-title {
   font-family: "Lora", serif;
   font-style: italic;
-  margin-top: 0;
+  margin-top: 5px;
   margin-bottom: 15px;
 }
 .entry-footer {
@@ -849,7 +849,7 @@ letter-spacing: 1px;
   color: #696969;
 }
 #colophon {
-  padding: 50px 0;
+  padding: 20px 0;
   text-align: center;
 }
 .site-info a {
