--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,11 @@
   
   <base href="{{ SITEURL }}">
 
-  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">  
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+  {% if FAVICON %}
+    <link rel="shortcut icon" href="{{ FAVICON }}" type="image/x-icon">
+    <link rel="icon" href="{{ FAVICON }}" type="image/x-icon">
+  {% endif %}
+
   
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" type="text/css" media="all">
   <link rel="stylesheet" href="{{ SITEURL }}/theme/css/font.css" type="text/css" media="all">
