--- a/templates/base.html
+++ b/templates/base.html
@@ -135,8 +135,8 @@
 
       <div class="container">
       <div id="logo">
-        <span class="site-name"><a class="navbar-brand" href="{{ SITEURL }}"><img width="310" src="{{ USER_LOGO_URL }}" class="attachment-full size-full" alt="logo">          </a>
-        </span><!-- end of .site-name -->
+          <h1>{{ SITETITLE }}</h1>
+          <h2>{{ SITESUBTITLE }}</h2>
       </div><!-- end of #logo -->
     </div>
 
