--- a/templates/index.html
+++ b/templates/index.html
@@ -3,28 +3,25 @@
 {% block title %}{{ SITENAME }}{% endblock %}
 
 {% block content %}
-{% for article in articles_page.object_list %}
-<article class="post">
-	<div class="blog-item-wrap">
-		<div class="post-inner-content">
-			<header class="entry-header page-header">
-				<span class="cat-item"><time datetime="{{ article.date }}">{{ article.locale_date }}</time></span>
-				<h1 class="entry-title"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
-			</header><!-- .entry-header -->
-			<div class="entry-content">
-				{{ article.summary|striptags }}
-        	</div><!-- .entry-content -->
-		</div>
-	</div>
-</article><!-- #post-## -->
-{% if not loop.last %}
-{% endif %}
-{% endfor %}
-{% endblock %}
-
-{% block footer %}
-<footer>
-{% include "modules/pagination.html" %}
-</footer>
-<div class="article_meta"></div>
+<article>
+  <div class="article_text">
+    <dl>
+      {% for year, year_articles in articles|groupby('date.year')|reverse %}
+        {% for _, month_articles in year_articles|groupby('date.month')|reverse %}
+          {# A little gross, but works (need a date object to get the month name). #}
+          <ul style="list-style: none;">
+            {% for article in month_articles %}
+            <li>
+                <header class="post-inner-content">
+                <span class="cat-item"><time datetime="{{ article.date.isoformat() }}">{{ article.date.strftime('%b %d, %Y') }}</time></span>
+                <h2 class="entry-title"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2></li>
+                </header>
+            {% endfor %}
+          </ul>
+        {% endfor %}
+      {% endfor %}
+    </dl>
+  </div>
+  <div class="article_meta"></div>
+</article>
 {% endblock %}
