--- a/templates/base.html
+++ b/templates/base.html
@@ -135,7 +135,7 @@
 
       <div class="container">
       <div id="logo">
-          <h1>{{ SITETITLE }}</h1>
+          <h1><a href="{{ SITEURL }}">{{ SITETITLE }}</a></h1>
           <h2>{{ SITESUBTITLE }}</h2>
       </div><!-- end of #logo -->
     </div>
